--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="title_search">Route Search</string>
     <string name="search_button">Search</string>
     <string name="search_no_route">No Routes Found!</string>
+    <string name="eta_arr_soon">Arr / Dept</string>
+    <string name="eta_text_min">min</string>
+    <string name="eta_text_to">To</string>
+
 
     <string name="title_nearest_station">Nearest Station</string>
 
