--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,12 @@
     <string name="title_search">Route Search</string>
     <string name="search_button">Search</string>
     <string name="search_no_route">No Routes Found!</string>
+    <string name="history_no_route">No Search History Found!</string>
     <string name="eta_arr_soon">Arr / Dept</string>
     <string name="eta_text_min">min</string>
     <string name="eta_text_to">To</string>
+
+    <string name="test">Test</string>
 
 
     <string name="title_nearest_station">Nearest Station</string>
@@ -45,12 +48,12 @@
     </string-array>
 
     <string-array name="line_array">
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>Line</item>
+        <item>Line</item>
+        <item>Line</item>
+        <item>Line</item>
+        <item>Line</item>
+        <item>Line</item>
     </string-array>
 
     <string-array name="datareturn_array">
