--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="eta_text_min">min</string>
     <string name="eta_text_to">To</string>
 
+
+    <string name="contextMenu_addFavourite">Add Favourite</string>
     <string name="test">Test</string>
 
 
