--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,14 @@
 
 
 
+    <string name="complain_title">Complain</string>
+    <string name="complain_email_title">COMPLAINT ABOUT LOST TRIPS OF</string>
+    <string name="complain_email_content_pt1">Dear Sir/Madam,
+        I would like to complain there are lost of trips of Company
+</string>
+    <string name="complain_email_content_pt2">.The information is listed as below.</string>
+
+
     <string name="contextMenu_addFavourite">Add Favourite</string>
     <string name="contextMenu_deleteFavourite">Delete Favourite</string>
     <string name="test">Test</string>
